feat: Add plugin firebase storage

--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -21,6 +21,13 @@
             android:orientation="vertical"
             android:padding="30dp">
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/cvi_user"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:background="@drawable/baseline_account_circle_24" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
